# kbe-proto-demo

./: .dockerignore  .env.example  .gitattributes  DOCKER.md  Dockerfile  HIVE_SUMMARY.md  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
docs/: ARCHITECTURE_SUMMARY.md  GRAPH_VISUALIZATION.md  QUICK_REFERENCE.md  api-design.md  api_design.md  architecture.md  building-model-design.md  development.md
docs/analysis/: analysis-summary.md  building-model-specification.md  performance-metrics.md  test-scenarios.md
src/: main.py
src/api/: __init__.py  actions.py  audit.py  building.py
src/models/: __init__.py  action_descriptor.py  building.py  kbe_actions.py
src/models/actions/: __init__.py  adjust_setpoint.py  load_shed.py  pre_cooling.py
src/models/descriptors/: __init__.py  adjust_setpoint_descriptor.py  load_shed_descriptor.py  pre_cooling_descriptor.py
src/services/: __init__.py  action_executor.py  state_manager.py  validator.py
src/static/: graph.html  index.html
tests/: README.md  TEST_SUMMARY.md  __init__.py  conftest.py  test_action_compliance.py
tests/fixtures/: __init__.py  sample_actions.py  sample_building.py
tests/test_api/: __init__.py  test_actions_endpoints.py  test_audit_endpoints.py  test_building_endpoints.py
tests/test_models/: __init__.py  test_action_validation.py  test_building.py  test_kbe_actions.py  test_pre_cooling.py
tests/test_services/: __init__.py  test_action_executor.py  test_validator.py
