[project]
name = "kbe-proto-demo"
version = "0.1.0"
description = "Knowledge-Based Engineering Actions API - Proof of Concept"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Core Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",

    # Data Validation & Settings
    "pydantic>=2.12.4",
    "pydantic-settings>=2.7.0",

    # RDF & Knowledge Base
    "rdflib>=7.4.0",

    # Async HTTP Client
    "httpx>=0.28.0",

    # Security (for future authentication)
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",

    # Utilities
    "python-multipart>=0.0.20",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    # Testing
    "pytest>=9.0.1",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",

    # Code Quality
    "ruff>=0.14.5",
    "mypy>=1.14.0",
    "pre-commit>=4.0.1",

    # Development Tools
    "pyrefly>=0.42.1",
    "ipython>=8.29.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--showlocals",
]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
